2012-09-11 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: New tab: "Extended". The colored rows
          indicate the class to which it belongs to the MCU. In the
          "RAM map" the tooltip shows the size of the RAM sections.

2012-09-10 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: Minor code cleaning.

2012-09-09 Borut Razem <borut.razem AT siol.net>
	* scripts/build/mingw/do_setup.sh: 
	  detect gputils version from configure.ac, cygwin gcc-4

2012-09-02 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: Help unto the "--verbose" switch.

2012-08-24 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: Tooltip in "RAM map". Created links to
	  "SFR map" from "RAM map". More information in "Features",
	  "RAM map" and "SFR map" tabs. New tabs in the main page:
	  "by RAM size", "by ROM size" and "by EEPROM size".
          New commandline option: --remote-url Error correction:
          The "class" html attribute is use the "id" instead.
          New capability: Highlights the Access area in the "RAM map" tab.
          Improvement unto the Opera web browser and some Chrome specific
          optimizations. Indicate the Access area in the "SFR map". Footer
          expansion on all pages. Improving the appearance.
          Good approximation it can be said that it is ready.

2012-08-11 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: New tab - "RAM map" in MCU info pages.

2012-08-10 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: New tab - "SFR map" in MCU info pages.

2012-08-09 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: Compute the size of SFRs and GPRs
          from gputils inc files.

2012-08-08 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: New tab in MCU info pages.

2012-08-08 Molnar Karoly <proton7@freemail.hu>
	* tools/config-help.pl: Create some html files from mplab-x
	  8bit_device.info file. All MCU to belongs an html file,