@@ -1,3 +1,6 @@
+2012-09-12 Molnar Karoly <proton7@freemail.hu>
+	* tools/config-help.pl: Summary of banks in the "RAM map".
+
 2012-09-11 Molnar Karoly <proton7@freemail.hu>
 	* tools/config-help.pl: New tab: "Extended". The colored rows
           indicate the class to which it belongs to the MCU. In the
